<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:contentDescription="@string/first_fragment_label"
    tools:context=".ControlFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textSendRecieve"
                        android:layout_width="match_parent"
                        android:layout_height="320dp"
                        android:autoSizeTextType="none"
                        android:background="#FFFFFF"
                        android:backgroundTint="#FFFFFF"
                        android:gravity="start"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textInput"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/input"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#5E35B1"
                android:contentDescription="@string/sends_data"
                android:src="@android:drawable/ic_menu_send"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/passthrough_Indicator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/indicates_if_passthrough_is_enabled"
                android:scaleX="1"
                android:src="@android:drawable/checkbox_off_background"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/passthrough_Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#5E35B1"
                android:text="@string/passthrough"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/SW1_Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sw1_indicator"
                android:src="@android:drawable/checkbox_off_background"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/SW2_Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/sw2_indicator"
                android:src="@android:drawable/checkbox_off_background"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/SW1_Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#474747"
                android:text="@string/sw_1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/SW2_Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#474747"
                android:text="@string/sw_2"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/LED1_Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/led1_indicator"
                android:src="@android:drawable/checkbox_off_background"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/LED2_Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/led2_indicator"
                android:src="@android:drawable/checkbox_off_background"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/LED1_Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#5E35B1"
                android:text="@string/led_1"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/LED2_Button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#5E35B1"
                android:text="@string/led_2"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>